syntax = "proto3";

package app.service;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "validate/validate.proto";
option go_package = "mall-go/api/app/service";

service App {

  rpc GetBannerById(IdRequest) returns (Banner) {
    option (google.api.http) = {
      get : "/banner/id/{id}"
    };
  }
  rpc GetBannerByName(nameRequest) returns (Banner) {
    option (google.api.http) = {
      get : "/banner/name/{name}"
    };
  }
  rpc GetThemeByNames(ThemeByNamesRequest) returns (Themes) {
    option (google.api.http) = {
      get : "/theme/by/names"
    };
  }
  rpc GetThemeByName(nameRequest) returns (ThemeSpu) {
    option (google.api.http) = {
      get : "/theme/name/{name}"
    };
  }
  rpc GetActivityByName(nameRequest) returns (Activity) {
    option (google.api.http) = {
      get : "/activity/name/{name}"
    };
  }
  rpc GetActivityWithCoupon(nameRequest)
      returns (ActivityCoupon) {
    option (google.api.http) = {
      get : "/activity/name/{name}/with_coupon"
    };
  }

  rpc ListCategory(google.protobuf.Empty) returns (Categories) {
    option (google.api.http) = {
      get : "/category"
    };
  }
  rpc ListGridCategory(google.protobuf.Empty) returns (GridCategories) {
    option (google.api.http) = {
      get : "/category/grid"
    };
  }

  rpc GetTagByType(typeRequest) returns (Tags) {
    option (google.api.http) = {
      get : "/tag/type/{type}"
    };
  }

  rpc GetCouponByType(typeRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/type/{type}"
    };
  }
  rpc GetUserCouponByStatus(statusRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/user/status/{status}"
    };
  }
  rpc GetUserCouponByStatusWithCategory(statusRequest) returns (Coupons) {
    option (google.api.http) = {
      get : "/coupon/user/status/{status}/with_category"
    };
  }

  rpc CreateUserCoupon(CreateUserCouponRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post : "/coupon/user"
      body : "*"
    };
  }

}
message IdRequest { int64 id = 1  [(validate.rules).int64 = {gt: 0}]; }
message nameRequest{ string  name=1; }
message typeRequest{ int32  type=1  [(validate.rules).int32 = {gte: 0}];}
message statusRequest{ int32  status=1 [(validate.rules).int32 = {gte: 0}] ;}


message ThemeByNamesRequest { string names = 1; }

message Tags {
  message Tag {
    int64 id = 1;
    string title = 2;
    uint32 highlight = 3;
    string description = 4;
    uint32 type = 5;
  }
  repeated Tag tag = 1;
}
message GridCategories {
  message GridCategory {
    int64 id = 1;
    string name = 2;
    string title = 3;
    string img = 4;
    int64 categoryId = 5;
    int64 rootCategoryId = 6;
  }
  repeated GridCategory category = 1;
}
message Categories {
  repeated Category roots = 1;
  repeated Category subs = 2;
}
message Category {
  int64 id = 1;
  string name = 2;
  bool is_root = 3;
  string img = 4;
  int64 parent_id = 5;
  int32 index = 6;
}
message Themes { repeated Theme theme = 1; }
message ThemeSpu{
  int64 id = 1;
  string title = 2;
  string description = 3;
  string name = 4;
  string entrance_img = 5;
  string internal_top_img = 7;
  string title_img = 8;
  string tpl_name = 9;
  int32 online = 10;
  repeated int64 spu_ids=11;
}
message Theme {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string name = 4;
  string entrance_img = 5;
  string internal_top_img = 7;
  string title_img = 8;
  string tpl_name = 9;
  int32 online = 10;
}

message Banner {
  int64 id = 1;
  string name = 2;
  string title = 3;
  string img = 4;
  string description = 5;
  repeated BannerItem items = 6;
}
message BannerItem {
  int64 id = 1;
  string img = 2;
  string keyword = 3;
  int32 type = 4;
  string name = 5;
  int64 bannerId = 6;
}

message Activity {
  int64 id = 1;
  string title = 2;
  string entrance_img = 3;
  int32 online = 4;
  string remark = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}
message ActivityCoupon {
  int64 id = 1;
  string title = 2;
  string entrance_img = 3;
  int32 online = 4;
  string remark = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
  repeated CouponBo coupon = 8;
}


message  CreateUserCouponRequest {
  int64 userId = 1;
  int64 couponId = 2;
}

message Coupons { repeated CouponBo coupon = 1; }
message CouponBo {
  int64 id = 1;
  string title = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  string description = 5;
  double full_money = 6;
  double minus = 7;
  double rate = 8;
  int32 type = 9;
  string remark = 10;
  int32 whole_store = 11;
}

